# blackjack-no-ai

./: README.md  pyproject.toml
.github/workflows/: pipeline.yaml
blackjack/: constants.py  deck.py  game.py  main.py
tests/: test_deck.py  test_game.py
